# Gigathon-Pasjans

./: .clang-format  CMakeLists.txt  README.md
lib/: pdcurses.lib
src/: application.cpp  application.h  card.cpp  card.h  display_mngr.cpp  display_mngr.h  game.cpp  game.h  main.cpp  title.txt
src/game/: card.cpp  card.h  deck.cpp  deck.h  game.cpp  game.h
src/game/scenes/: game_scene.cpp  game_scene.h  main_menu.cpp  main_menu.h  scene.h
